# coltrane_static_site

./: Procfile  README.md  app.py  gunicorn.conf.py  justfile  output.json  pyproject.toml  record.txt  requirements.txt
bs-studio/: GabrielSolerPsy-blue-play.bsdesign  GabrielSolerPsy-blue-tranquil.bsdesign  GabrielSolerPsy.bsdesign
bs-studio/blue-playful/: index.html
bs-studio/shades/: index.html
bs-studio/tranquil-blue/: index.html  untitled.html
content/: articles.md  index.md
content/about/: contact.md  index.md  me.md  pricing.md  projects.md  site.md  studies.md
content/areas/: 1_creativity.md  2_migration.md  3_deepth.md  3_depth.md  4_neurodiversity.md  creativity.md  depth.md  index.md  migration.md  neurodivergency.md  neurodiversity.md
content/articles/: creatherapy.md  creativity.md  development.md  hello copy 2.md  hello copy 3.md  index.md  masculinity.md  mindfulness.md  qualitative.md  trauma.md
content/contact/: index.md
gs_therapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
output/: index.html  sitemap.xml
output/about/contact/: index.html
output/about/me/: index.html
output/articles/: index.html
output/static/: staticfiles.json
site/: app.py  output.json
site/content/: index.md
site/output/: index.html  rss.xml  sitemap.xml
site/tests/: test_functional.py
static/css/: style.css
static/js/: index-cards.js  script.js
templates/coltrane/: *.html  about_nav.html  base.html  content.html  group_nav.html  hero.html  index.html  list.html  map.html
tests/: functional.py  test_functional.py
(+55 files in other folders)
