[tool.poetry]
name = "Gabriel Soler"
version = "0.1.0"
description = ""
authors = ["Gabriel Soler <gsoler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coltrane = {version = "^0.33.0", extras = ["deploy"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
